Changelog
=========


1.2 (unreleased)
----------------

- Accept also interfaces directly rather than lists of interfaces when
  creating mocks or stubs which provides the interfaces.
  [jone]


1.1 (2011-11-16)
----------------

- Patch mock_tool: do not count, so that it can be used multiple times.
  [jone]


1.0 (2011-10-12)
----------------

- Initial release